@@ -30,7 +30,6 @@ c57477edd6d18bd9eeca2f21add73919  Python-2.7.3.tar.bz2
 14f3a22fc14118a48be80ab5ea974f49  libaio-0.3.109.tar.bz2
 3b97f8da8444b9d4bfebefbecc5b6de0  glue-1.0.11.tar.bz2
 67948acb2ca081f23359d0256e9a271c  readline-6.2.tar.gz
-00affc915adfade29d8f0dadcc5951f6  resource_agents-3.9.2.tar.gz
 95380bd4081f85ef08c5209f4107e9f8  lzo-2.06.tar.gz
 f91c74f9ccab2b574a98be5bc31eb280  mhash-0.9.9.9.tar.bz2
 fd03df6965f8f56dd5b8518ca43b4f5e  tokyocabinet-1.4.48.tar.gz
@@ -100,7 +99,6 @@ fdd5f5ec673c9f630a102ceff7612774  mt-st-1.1.tar.gz
 c2e90f9d6b47c4b4f7a3e85e01bbaa0a  LVM2-2.02.108.tar.gz
 c6d30facf18ff825e2721d0aa9c3add8  EnhanceIO-master_20140810.tar.gz
 6755765bab88b506181268ef7982595e  nagios-plugins-2.0.3.tar.gz
-9cfb30874eb5467a6e60b7a8a31d6b07  btier-tip_c3e46b.tar.gz
 80e243e1a1379230403345821bcc72f8  ceph-0.80.5.tar.gz
 7f8ac985c45086b5fbcd12cecd23cf07  keyutils-1.5.9.tar.bz2
 28171438127a2d268893f040fd84ae2a  libedit-20140620-3.1.tar.gz
@@ -130,3 +128,5 @@ a0edda805eb7d6ea600a230fb0979ea1  stunnel-5.10.tar.gz
 73e7f49f525c51fa4a995aea4d80de41  python-daemon-2.0.5.tar.gz
 54b057676a43cb5497d028eede030511  spl-0.6.4.tar.gz
 5b90b3bfcfb9d8e6f0c6ea0061e6b285  zfs-0.6.4.tar.gz
+6873d5a217aee3026193fb85bfa18a4a  resource-agents-3.9.6.tar.gz
+65aa71b8d4cd4b927a7ec69b5d53ecc7  btier-1.3.11.tar.gz
