@@ -30,7 +30,6 @@ a80469935297430941d9ea01677fd3bcc7bf2ebf31a1a4dcf1c0d81129ed36f6  crmsh-1.2.4.ta
 b5cefce0a3cb49f8dca4d00e9480c0d9b45b75863bd44764156e322ee214e794  libaio-0.3.109.tar.bz2
 79240761918ef6215a909efb72c7b51e3bfc83227544c2e368e7e15f4d6fa69c  glue-1.0.11.tar.bz2
 79a696070a058c233c72dd6ac697021cc64abd5ed51e59db867d66d196a89381  readline-6.2.tar.gz
-21f8faa7e2f309deed206c9988fd0839f668c94b04d46ff3a37d551657ba2113  resource_agents-3.9.2.tar.gz
 ff79e6f836d62d3f86ef6ce893ed65d07e638ef4d3cb952963471b4234d43e73  lzo-2.06.tar.gz
 56521c52a9033779154432d0ae47ad7198914785265e1f570cee21ab248dfef0  mhash-0.9.9.9.tar.bz2
 a003f47c39a91e22d76bc4fe68b9b3de0f38851b160bbb1ca07a4f6441de1f90  tokyocabinet-1.4.48.tar.gz
@@ -100,7 +99,6 @@ f3367133781ea78737b731a6c2499f97bf8eb18dcb0f3457df9ac1139d386f4c  win_binaries-2
 bfd2c8115e1c8587c52414d18f6a1166b6fb2f828faee924fc818773dc87ce7a  LVM2-2.02.108.tar.gz
 353a27a642f98ab06c0a613887272b86edab5d56b0c7f1198cc163ec4e1043d4  EnhanceIO-master_20140810.tar.gz
 8f0021442dce0138f0285ca22960b870662e28ae8973d49d439463588aada04a  nagios-plugins-2.0.3.tar.gz
-4e24d078604f7b01ffc2053552bbd05432b45b5f5dfec184084c6d86fca22ae9  btier-tip_c3e46b.tar.gz
 af6797d343c7204ab497691672adc47419609ea5de26ff87819712e4b31f49d1  ceph-0.80.5.tar.gz
 4da2c5552c688b65ab14d4fd40fbdf720c8b396d8ece643e040cf6e707e083ae  keyutils-1.5.9.tar.bz2
 a22b9b2a8cf4aec9ff51a57e8c848b69640d0195282159d245d8137a19bfcaf2  libedit-20140620-3.1.tar.gz
@@ -130,3 +128,5 @@ b8392f4ede3177eeeaa4f81698204a4984a11665ce597f6c71110fd67e51948b  mhvtl-master_2
 afde4fa433d94d007206ee31a0941d55b5eb232a5422b670aad628547b46bf68  python-daemon-2.0.5.tar.gz
 67c9ec5ece0d2bb236af2655a8a2fb6a62493b900c4bbac8ac74a0c622a625a8  spl-0.6.4.tar.gz
 fe6a9ad775a5b2ae578c192f17c1981755647ff69ec6bc952e983994572c0c02  zfs-0.6.4.tar.gz
+39722cdee68ff96d06788f05f325bd21ec2fc59c59d847e5e4b23c6df23bf678  resource-agents-3.9.6.tar.gz
+63b9ad7d2e8a6dbddb43cf4c43e6bcec25e085371938d35e198fd7bb6b44bc61  btier-1.3.11.tar.gz
