@@ -1,3 +1,7 @@
+2015-05-08  Marc A. Smith  <marc@astersmith.com>
+
+	updated resource_agents package to version 3.9.6 (now "resource-agents"); updated btier to version 1.3.11
+
 2015-04-29  Marc A. Smith  <marc@astersmith.com>
 
 	swapped out home-grown USB sync script for rsync; fixed build dep issue for esos_kernels recipe
